// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductThumbnail /> Check how everything render Should src be a link to product photo in order collection 1`] = `
<Styled(FlexWrapper)
  align="center"
  height="5"
  justify="center"
  width="5"
>
  <img
    alt="testAlt"
    src="http://192.168.1.109:4000/orders/o1/p1/photo"
  />
</Styled(FlexWrapper)>
`;

exports[`<ProductThumbnail /> Check how everything render Should src be a link to product photo in product collection 1`] = `
<Styled(FlexWrapper)
  align="center"
  height="5"
  justify="center"
  width="5"
>
  <img
    alt="testAlt"
    src="http://192.168.1.109:4000/products/p1/photo"
  />
</Styled(FlexWrapper)>
`;

exports[`<ProductThumbnail /> Check how everything render Should src be a noPhoto 1`] = `
<Styled(FlexWrapper)
  align="center"
  height="5"
  justify="center"
  width="5"
>
  <img
    alt="testAlt"
    src="no-photo.png"
  />
</Styled(FlexWrapper)>
`;
